--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -6,3 +6,31 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	background-color: rgb(240, 235, 235);
 }
+
+.box {
+  max-width: 100vw;
+  width: 400px;
+  border-radius: 15px;
+  padding: 15px;
+  background-color: rgb(253, 249, 249);
+  box-shadow: 0px 0px 15px 10px rgba(0,0,0,0.05);
+  display: block;
+}
+
+h2
+{
+  font-weight: 300;
+  padding: 0;
+  margin: 0;
+  color: grey;
+}
+
+a, a:visited, a:active, a:hover
+{
+  color: black;
+}
+
+p
+{
+  font-size: 14px;
+}
